[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ttff"
version = "0.1.0"
description = "A Python package for ttff."
authors = [
    { name="Michael Roust", email="michael.roust@universe-technologies.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = "MIT" 